# ugon

./: .markdown.css  Cargo.toml  LICENSE  README.md  SPEC.md  justfile
src/: consts.rs  error.rs  input.rs  io.rs  lib.rs  output.rs  read.rs  span.rs  value.rs  write.rs
src/macros/: build.rs  fill.rs  write.rs
ugon-cli/: Cargo.toml
